--- a/1_LLM_Tokenizer.ipynb
+++ b/1_LLM_Tokenizer.ipynb
@@ -2509,6 +2509,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Special context tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "LLMs use Special context tokens to handle words which are not in the vocabulary."
    ]
   },
